kubernetes/infra/configs/kyverno/tests/require-probes/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-probes
policies:
- ../../cluster-policies/require-probes.yaml
resources:
- resources.yaml
results:
- policy: require-probes
  kind: Pod
  resources:
  - product/probes-present
  result: pass
  isValidatingPolicy: true
- policy: require-probes
  kind: Pod
  resources:
  - product/readiness-missing
  result: fail
  isValidatingPolicy: true
- policy: require-probes
  kind: Pod
  resources:
  - product/job-owned
  result: skip
  isValidatingPolicy: true
- policy: require-probes
  kind: Pod
  resources:
  - product/rs-owned-probes-present
  result: pass
  isValidatingPolicy: true
- policy: require-probes
  kind: Pod
  resources:
  - product/rs-owned-readiness-missing
  result: fail
  isValidatingPolicy: true
- policy: require-probes
  kind: Pod
  resources:
  - product/rs-owned-sidecar-without-probes
  result: fail
  isValidatingPolicy: true
